plugins {
    // id 'java'
    id 'org.springframework.boot' version "${springBootVersion}" apply false
    id 'com.netflix.dgs.codegen' version "${netflixDgsCodeGenVersion}" apply false
    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
}

wrapper {
    gradleVersion = '8.5'
}

// Top-level build configuration
subprojects {

    apply plugin: 'java'
    apply plugin: "org.springframework.boot"
    apply plugin: 'io.spring.dependency-management'

    // Добавляем репозитории для загрузки зависимостей
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    dependencyManagement {
        imports {
            //noinspection UnnecessaryQualifiedReference
            mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
        }
    }

    dependencies {
        // Lombok dependency
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        // If using Lombok's @Builder or @Slf4j with MapStruct
        compileOnly "org.mapstruct:mapstruct:${mapstructVersion}"
        annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
        annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"

        // implementation 'org.springframework.boot:spring-boot-starter'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    bootJar {
        enabled = false
    }

    test {
        useJUnitPlatform()
    }
}